<resources>
    <string name="app_name">HidroTrack</string>

    <string name="splash">Splash Activity</string>

    <string name="start_screen">Pantalla de Inicio</string>
    <string name="hidro_logo">HidroTrack</string>
    <string name="titulo_ini">Bienvenidos a HidroTrack</string>

    <string name="consumption">Consumo</string>
    <string name="titulo_consumo">Registro de Consumo de Agua</string>
    <string name="hint_consumo">Escriba su Consumo</string>
    <string name="guardar">Guardar</string>

    <string name="tips">Consejos</string>
    <string name="tip_t">Consejos para Reducir el Consumo</string>
    <string name="tip_c">
        Toma baños de 5 minutos: Reducir el tiempo que pasas en la ducha puede ahorrarte hasta 600 litros de agua al mes. Al tomar baños más cortos, estás contribuyendo significativamente a la conservación del agua en tu hogar.
    </string>

    <string name="progress">Progreso</string>
    <string name="pr_t">Seguimiento y Progreso</string>
    <string name="pr1">Diagrama del Progreso</string>

    <string name="info">Información</string>
    <string name="info_1">Información sobre la Conservación del Agua</string>
    <string name="info_2">
        Verifica y corrige fugas: Revisa periódicamente que el flotador de tu inodoro esté funcionando correctamente para evitar fugas de agua. También asegúrate de que no haya filtraciones por el rebosadero y que la tapa o cono del inodoro selle bien. Las fugas pueden desperdiciar grandes cantidades de agua sin que te des cuenta.
    </string>
    <string name="settings">Configuración</string>
    <string name="sp1j_title">Elije una configuración</string>

    <string name="rtrn">Regresar</string>

    <string name="other_b">Otra info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_0">
        \t - Energía Solar.\n
        \t - Energía Eólica.\n
        \t - Energía Hidráulica.\n
        \t - Energía Geotérmica.\n
        \t - Energía de Biomasa.\n
        \t - Energía Mareomotriz.\n
        \t - Energía Undimotriz.
        </string>
    <string name="fragment_1">
        \t 1. China.\n
        \t 2. Alemania.\n
        \t 3. Costa Rica.\n
        \t 4. Islandia.\n
        \t 5. Noruega.\n
        \t 6. Dinamarca.
    </string>

</resources>