<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iV1"
        android:layout_width="133dp"
        android:layout_height="107dp"
        android:contentDescription="@string/hidro_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/_hidrotrack_logo" />

    <TextView
        android:id="@+id/tV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:background="#063F4B"
        android:text="@string/titulo_ini"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="#063F4B"
        android:text="@string/consumption"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/tV1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="#063F4B"
        android:text="@string/tips"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/btn12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="#063F4B"
        android:text="@string/progress"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/btn13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="#063F4B"
        android:text="@string/info"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/btn14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="#063F4B"
        android:text="@string/settings"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/btn15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>