<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".Consumption">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iV2"
                android:layout_width="133dp"
                android:layout_height="107dp"
                android:contentDescription="@string/hidro_logo"
                app:srcCompat="@drawable/_hidrotrack_logo" />

            <TextView
                android:id="@+id/tV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#063F4B"
                android:fontFamily="casual"
                android:text="@string/titulo_consumo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/eT2"
                android:layout_width="wrap_content"
                android:layout_height="48sp"
                android:layout_marginTop="60sp"
                android:autofillHints="consumo"
                android:ems="10"
                android:hint="@string/hint_consumo"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColorHint="#063F4B" />

            <Button
                android:id="@+id/btn23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:backgroundTint="#063F4B"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btn21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="50sp"
                android:backgroundTint="#063F4B"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:text="@string/rtrn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>