<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".Tips">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iV3"
                android:layout_width="133dp"
                android:layout_height="107dp"
                android:contentDescription="@string/hidro_logo"
                app:srcCompat="@drawable/_hidrotrack_logo" />

            <TextView
                android:id="@+id/tV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#063F4B"
                android:fontFamily="casual"
                android:text="@string/tip_t"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tV32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:text="@string/tip_c"
                android:textAlignment="center"
                android:textColor="#063F4B"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80sp"
                android:layout_marginBottom="50sp"
                android:backgroundTint="#063F4B"
                android:fontFamily="casual"
                android:text="@string/rtrn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>