<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".Settings">

    <ImageView
        android:id="@+id/iV6"
        android:layout_width="133dp"
        android:layout_height="107dp"
        android:contentDescription="@string/hidro_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/_hidrotrack_logo" />

    <TextView
        android:id="@+id/tV6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:background="#063F4B"
        android:text="@string/settings"
        android:textAlignment="center"
        android:fontFamily="casual"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/sp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:layout_marginTop="80sp"
        app:layout_constraintTop_toBottomOf="@+id/tV6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="#063F4B"
        android:text="@string/guardar"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/sp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:backgroundTint="#063F4B"
        android:text="@string/rtrn"
        android:fontFamily="casual"
        app:layout_constraintTop_toBottomOf="@+id/btn62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>