<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".Info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iV5"
                android:layout_width="133dp"
                android:layout_height="107dp"
                android:contentDescription="@string/hidro_logo"
                app:srcCompat="@drawable/_hidrotrack_logo" />

            <TextView
                android:id="@+id/tV5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#063F4B"
                android:fontFamily="casual"
                android:text="@string/info_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="50sp"
                app:cardBackgroundColor="#063F4B"
                app:cardElevation="50sp"
                android:layout_margin="20sp">

                <TextView
                    android:id="@+id/tV52"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_2"
                    android:padding="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn51"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="50sp"
                android:backgroundTint="#063F4B"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:text="@string/rtrn" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>