<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#87CEEB"
    tools:context=".Other">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iV7"
                android:layout_width="133dp"
                android:layout_height="107dp"
                android:contentDescription="@string/hidro_logo"
                app:srcCompat="@drawable/_hidrotrack_logo" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#063F4B"
                android:fontFamily="casual"
                android:text="@string/other_b"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#063F4B"
                app:tabIconTint="@color/white"
                app:tabIndicatorColor="@color/white"
                app:tabSelectedTextColor="@color/white">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/it71"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/energy7"
                    android:text="Otras Energías" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/it72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/flag7"
                    android:text="Paises líderes" />


            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp7"
                android:padding="10sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn71"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="30sp"
                android:backgroundTint="#063F4B"
                android:fontFamily="casual"
                android:textColor="@color/white"
                android:text="@string/rtrn" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>